# cmp_be

./: .flake8  .pre-commit-config.yaml  .pylintrc  README.md  pyproject.toml
.github/workflows/: flake8.yml  pylint.yml
app/: settings.py  urls.py
companies/: admin.py  models.py
patients/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
patients/migrations/: 0001_initial.py  0002_clinichistoryitems.py
patients/models/: __init__.py  clinic_histories.py  patients.py
utils/: models.py
